--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,9 @@ bee-inx = { version = "1.0.0-beta.4", default-features = false, optional = true 
 tonic = { version = "0.8", default-features = false, optional = true }
 
 # Metrics
-bee-metrics = { git = "https://github.com/iotaledger/bee", branch = "mainnet-develop-0.4", default-features = false, features = ["sync"], optional = true }
+metrics = { version = "0.20.0", default-features = false }
+metrics-exporter-prometheus = { version = "0.11.0", default-features = false, features = ["http-listener", "tokio"] }
+metrics-util = { version = "0.14.0", default-features = false }
 
 # Stardust types
 bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.4", default-features = false, optional = true }
@@ -89,7 +91,6 @@ packable = { version = "0.5", default-features = false }
 default = [
     "api",
     "inx",
-    "metrics",
     "stardust",
 ]
 api = [ 
@@ -117,9 +118,6 @@ console = [
 inx = [
     "dep:bee-inx",
     "dep:tonic",
-]
-metrics = [
-    "dep:bee-metrics",
 ]
 stardust = [
     "dep:bee-block-stardust",
