--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -106,6 +106,24 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--web.external-url=http://localhost:9090'
 
+  mongodb-exporter:
+    image: percona/mongodb_exporter:0.34
+    profiles:
+      - metrics
+    depends_on:
+      - mongo1
+    container_name: mongodb-exporter
+    restart: unless-stopped
+    user: "65532"
+    ports:
+      - '9216:9261'
+    command:
+      - '--mongodb.uri=mongodb://mongo1:27017'
+      - '--mongodb.direct-connect=true'
+      - '--web.listen-address=:9216'
+      - '--log.level=info'
+      - '--discovering-mode'
+
   grafana:
     image: grafana/grafana:latest
     profiles:
@@ -118,5 +136,7 @@ services:
     volumes:
       - ./data/grafana:/var/lib/grafana
       - ./assets/grafana/:/etc/grafana/provisioning/
+    environment:
+      - GF_INSTALL_PLUGINS=yesoreyeram-infinity-datasource
 
 
