--- a/documentation/package.json
+++ b/documentation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs-template",
+  "name": "inx-chronicle-develop",
   "version": "0.0.0",
   "scripts": {
     "start": "iota-wiki start",
@@ -7,7 +7,7 @@
   },
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=14.14.0"
+    "node": ">=16.10.0"
   },
   "dependencies": {
     "raw-loader": "^4.0.2",
