--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     paths-ignore: 
       - '**.md'
       - 'bin/inx-chronicle/docker/**'
+    branches:
+      - main
   pull_request:
     paths-ignore: 
       - '**.md'
