--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "chronicle"
-version = "1.0.0-beta.13"
-authors = ["IOTA Stiftung"]
-edition = "2021"
+authors = [ "IOTA Stiftung" ]
 description = "IOTA permanode implemented as an IOTA Node Extension (INX)."
+edition = "2021"
+homepage = "https://www.iota.org"
+keywords = [ "iota", "storage", "permanode", "chronicle", "inx" ]
+license = "Apache-2.0"
+name = "chronicle"
 readme = "README.md"
 repository = "https://github.com/iotaledger/inx-chronicle"
-license = "Apache-2.0"
-keywords = ["iota", "storage", "permanode", "chronicle", "inx"]
-homepage = "https://www.iota.org"
 rust-version = "1.60"
+version = "1.0.0-beta.13"
 
 [lib]
 name = "chronicle"
@@ -25,104 +25,47 @@ path = "src/bin/inx-chronicle/main.rs"
 async-recursion = { version = "1.0", default-features = false }
 async-trait = { version = "0.1", default-features = false }
 bytesize = { version = "1.1", default-features = false }
-clap = { version = "3.2", default-features = false, features = [
-    "env",
-    "derive",
-    "std",
-] }
-derive_more = { version = "0.99", default-features = false, features = [
-    "add",
-    "add_assign",
-    "deref",
-    "deref_mut",
-] }
+clap = { version = "3.2", default-features = false, features = [ "env", "derive", "std" ] }
+derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
 dotenv = { version = "0.15", default-features = false }
 dyn-clone = { version = "1.0", default-features = false }
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
 humantime-serde = { version = "1.1", default-features = false }
-mongodb = { version = "2.2", default-features = false, features = [
-    "tokio-runtime",
-] }
+mongodb = { version = "2.2", default-features = false, features = [ "tokio-runtime" ] }
 pin-project = { version = "1.0", default-features = false }
-prefix-hex = { version = "0.4.0", default-features = false, features = [
-    "primitive-types",
-] }
+prefix-hex = { version = "0.4.0", default-features = false, features = [ "primitive-types" ] }
 primitive-types = { version = "0.11", default-features = false }
-serde = { version = "1.0", features = ["derive"], default-features = false }
+serde = { version = "1.0", features = [ "derive" ], default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
-serde_json = { version = "1.0", default-features = false, features = ["std"] }
+serde_json = { version = "1.0", default-features = false, features = [ "std" ] }
 thiserror = { version = "1.0", default-features = false }
-time = { version = "0.3", default-features = false, features = ["std"] }
-tokio = { version = "1.19", default-features = false, features = [
-    "macros",
-    "rt-multi-thread",
-    "signal",
-] }
+time = { version = "0.3", default-features = false, features = [ "std" ] }
+tokio = { version = "1.19", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
-tracing = { version = "0.1", default-features = false, features = [
-    "std",
-    "attributes",
-] }
-tracing-futures = { version = "0.2", default-features = false, features = [
-    "std",
-    "std-future",
-] }
-tracing-subscriber = { version = "0.3", default-features = false, features = [
-    "std",
-    "fmt",
-    "ansi",
-    "smallvec",
-    "tracing-log",
-    "local-time",
-    "env-filter",
-] }
+tracing = { version = "0.1", default-features = false, features = [ "std", "attributes" ] }
+tracing-futures = { version = "0.2", default-features = false, features = [ "std", "std-future" ] }
+tracing-subscriber = { version = "0.3", default-features = false, features = [ "std", "fmt", "ansi", "smallvec", "tracing-log", "local-time", "env-filter" ] }
 uint = { version = "0.9", default-features = false }
 url = { version = "2.2", default-features = false }
-uuid = { version = "1.1", default-features = false, features = ["v4"] }
+uuid = { version = "1.1", default-features = false, features = [ "v4" ] }
 
 # API
 auth-helper = { version = "0.3", default-features = false, optional = true }
-axum = { version = "0.5", default-features = false, features = [
-    "http1",
-    "json",
-    "query",
-    "original-uri",
-    "headers",
-], optional = true }
-ed25519 = { version = "1.5", default-features = false, features = [
-    "alloc",
-    "pkcs8",
-    "pem",
-], optional = true }
-ed25519-dalek = { version = "1.0", default-features = false, features = [
-    "u64_backend",
-], optional = true }
+axum = { version = "0.5", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers" ], optional = true }
+ed25519 = { version = "1.5", default-features = false, features = [ "alloc", "pkcs8", "pem" ], optional = true }
+ed25519-dalek = { version = "1.0", default-features = false, features = [ "u64_backend" ], optional = true }
 hex = { version = "0.4", default-features = false, optional = true }
-hyper = { version = "0.14", default-features = false, features = [
-    "server",
-    "tcp",
-    "stream",
-], optional = true }
+hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
 lazy_static = { version = "1.4", default-features = false, optional = true }
 packable = { version = "0.5", default-features = false, optional = true }
-rand = { version = "0.8", default-features = false, features = [
-    "std",
-], optional = true }
-regex = { version = "1.5", default-features = false, features = [
-    "std",
-], optional = true }
+rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
+regex = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
-tower-http = { version = "0.3", default-features = false, features = [
-    "cors",
-    "catch-panic",
-    "trace",
-], optional = true }
-zeroize = { version = "1.5", default-features = false, features = [
-    "std",
-], optional = true }
+tower-http = { version = "0.3", default-features = false, features = [ "cors", "catch-panic", "trace" ], optional = true }
+zeroize = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 
 # INX
 bee-inx = { version = "1.0.0-beta.4", default-features = false, optional = true }
@@ -130,26 +73,17 @@ tonic = { version = "0.8", default-features = false, optional = true }
 
 # Metrics
 metrics = { version = "0.20.0", default-features = false }
-metrics-exporter-prometheus = { version = "0.11.0", default-features = false, features = [
-    "http-listener",
-    "tokio",
-] }
+metrics-exporter-prometheus = { version = "0.11.0", default-features = false, features = [ "http-listener", "tokio" ] }
 metrics-util = { version = "0.14.0", default-features = false }
 
 # Stardust types
 bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.4", default-features = false, optional = true }
-bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.5", default-features = false, features = [
-    "dto",
-    "rand",
-    "std",
-    "serde",
-], optional = true }
+bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.5", default-features = false, features = [ "dto", "rand", "std", "serde" ], optional = true }
 
 # Tokio Console
 console-subscriber = { version = "0.1", default-features = false, optional = true }
 
 [features]
-default = ["api", "inx", "stardust"]
 api = [
     "dep:auth-helper",
     "dep:axum",
@@ -166,18 +100,19 @@ api = [
     "dep:tower",
     "dep:tower-http",
     "dep:zeroize",
-    "stardust",
+    "stardust"
 ]
-console = ["dep:console-subscriber", "tokio/tracing"]
-inx = ["dep:bee-inx", "dep:tonic"]
-stardust = ["dep:bee-block-stardust", "dep:bee-api-types-stardust"]
+console = [ "dep:console-subscriber", "tokio/tracing" ]
+default = [ "api", "inx", "stardust" ]
+inx = [ "dep:bee-inx", "dep:tonic" ]
+stardust = [ "dep:bee-block-stardust", "dep:bee-api-types-stardust" ]
 
 [profile.production]
-inherits = "release"
 codegen-units = 1
+inherits = "release"
 lto = true
 strip = "symbols"
 
 [workspace]
-members = [".", "./src/tests"]
-default-members = ["."]
+default-members = [ "." ]
+members = [ ".", "./src/tests" ]
