--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,11 @@ bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.5", default-
 console-subscriber = { version = "0.1", default-features = false, optional = true }
 
 [features]
-default = [ "api", "inx", "stardust" ]
+default = [ 
+    "api", 
+    "inx", 
+    "stardust",
+]
 api = [
     "dep:auth-helper",
     "dep:axum",
