feat(db): add some basic db tests (#567)
* Add some basic db tests

* Configure CI for database tests

* Fix double CI

* Add more output tests

* fmt

* Add integration tests inner crate

* fmt

* fix dependencies

* Revert cargo file formatting

* Fix toml and gitignore

* one more thing

* `bee` -> `chronicle`

* Use integration tests rather than a separate crate

* rename

* clippy

* Re-separate dev deps

* Revert MongoClient

* docs

* gitignore

Co-authored-by: Jochen Görtler <jochen.goertler@iota.org>

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -11,7 +11,8 @@ ci-clippy-api = "clippy --all-targets --no-default-features --features api,stard
 ci-doctest = "test --doc --all-features"
 ci-doc = "doc --all-features --no-deps --document-private-items"
 ci-fmt = "fmt --all -- --check"
-ci-test = "test --all-targets --all-features"
+ci-test = "test --all-features --bins --lib"
+ci-test-int = "test --all-features --test *"
 ci-toml = "sort --grouped --check"
 ci-udeps = "udeps --all-targets --all-features --backend=depinfo"
 
