feat(db): separate database collections into individual types (#626)
* Separate database collections into individual types.

* Create ext traits to simplify usage.

* Use custom thread safe iterator for chunking.

* Write chunks tests and cleanup code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ console-subscriber = { version = "0.1", default-features = false, optional = tru
 
 [dev-dependencies]
 packable = { version = "=0.6.1", default-features = false }
+rand = { version = "0.8", default-features = false, features = [ "std" ] }
 
 [features]
 default = [ 
