--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,7 +77,7 @@ metrics-exporter-prometheus = { version = "0.11.0", default-features = false, fe
 metrics-util = { version = "0.14.0", default-features = false }
 
 # Stardust types
-bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.7", default-features = false, optional = true }
+bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.7", default-features = false, features = ["axum"], optional = true }
 bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.7", default-features = false, features = [ "dto", "rand", "std", "serde" ], optional = true }
 
 # Tokio Console
