--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.7.0
         with:
-          mongodb-version: ${{ inputs.mongodb }}
+          mongodb-version: "6.0"
           mongodb-replica-set: test-rs
 
       - name: Run test coverage
