Ignore documentation tests

--- a/.github/workflows/test-iota-docs-build.yml
+++ b/.github/workflows/test-iota-docs-build.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "documentation/**"
   pull_request:
-    branches:
-      - main
+    paths:
+      - "documentation/**"
+    
 
 concurrency: 
   group: ${{ github.workflow }}-${{ github.ref }}
