--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -43,9 +43,9 @@ jobs:
           version: 0.2.1
 
       - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.7.0
+        uses: supercharge/mongodb-github-action@1.8.0
         with:
-          mongodb-version: ${{ inputs.mongodb }}
+          mongodb-version: "6.0"
           mongodb-replica-set: test-rs
 
       - name: Run test coverage
