Include workflow file

--- a/.github/workflows/swagger.yml
+++ b/.github/workflows/swagger.yml
@@ -4,11 +4,13 @@ on:
   push:
     paths:
       - "documentation/api/**"
+      - ".github/workflows/swagger.yml"
     branches:
       - main
   pull_request:
     paths:
       - "documentation/api/**"
+      - ".github/workflows/swagger.yml"
 
 jobs:
   list-docs:
