--- a/test_util/Cargo.toml
+++ b/test_util/Cargo.toml
@@ -2,8 +2,7 @@
 name = "test_util"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
 
 [dependencies]
 bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.7", default-features = false, features = [ "dto", "rand", "std", "serde" ]}
