--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,12 +81,11 @@ tracing-opentelemetry = { version = "0.17", default-features = false, features =
 
 # Stardust types
 bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.7", default-features = false, features = ["axum"], optional = true }
-bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.7", default-features = false, features = [ "dto", "rand", "std", "serde" ], optional = true }
+bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.7", default-features = false, features = [ "dto", "std", "serde" ], optional = true }
 
 [dev-dependencies]
 packable = { version = "=0.6.1", default-features = false }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
-test_util = { path = "./test_util" }
 
 [features]
 default = [ 
@@ -121,6 +120,9 @@ opentelemetry = [
     "dep:opentelemetry-jaeger",
     "dep:tracing-opentelemetry",
 ]
+rand = [
+    "bee-block-stardust?/rand"
+]
 stardust = [
     "dep:bee-block-stardust",
     "dep:bee-api-types-stardust",
@@ -131,7 +133,3 @@ inherits = "release"
 codegen-units = 1
 lto = true
 strip = "symbols"
-
-[workspace]
-default-members = [".", "test_util"]
-members = [".", "test_util"]
