--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,7 @@ tracing-opentelemetry = { version = "0.17", default-features = false, features =
 
 # Stardust types
 bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.7", default-features = false, features = ["axum"], optional = true }
-bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.7", default-features = false, features = [ "dto", "rand", "std", "serde" ], optional = true }
+bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.7", default-features = false, features = [ "dto", "std", "serde" ], optional = true }
 
 [dev-dependencies]
 packable = { version = "=0.6.1", default-features = false }
@@ -119,6 +119,9 @@ opentelemetry = [
     "dep:opentelemetry",
     "dep:opentelemetry-jaeger",
     "dep:tracing-opentelemetry",
+]
+rand = [
+    "bee-block-stardust?/rand"
 ]
 stardust = [
     "dep:bee-block-stardust",
