--- a/documentation/api/api-analytics.yml
+++ b/documentation/api/api-analytics.yml
@@ -145,6 +145,24 @@ paths:
           $ref: "#/components/responses/BadRequest"
         "500":
           $ref: "#/components/responses/InternalError"
+  /api/analytics/v2/activity/claiming:
+    get:
+      tags:
+        - activity
+      summary: Returns claiming activity.
+      description: >-
+        Returns the amount of tokens claimed within the specified milestone.
+      parameters:
+        - $ref: "#/components/parameters/ledgerIndex"
+      responses:
+        "200":
+          $ref: "#/components/responses/Claiming"
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "404":
+          $ref: "#/components/responses/NoResults"
+        "500":
+          $ref: "#/components/responses/InternalError"
   /api/analytics/v2/activity/milestones/{milestoneId}:
     get:
       tags:
@@ -406,9 +424,9 @@ components:
             properties:
               address:
                 oneOf:
-                  - $ref: "https://raw.githubusercontent.com/iotaledger/tips/stardust-api/tips/TIP-0025/core-rest-api.yaml#/components/schemas/Ed25519Address"
-                  - $ref: "https://raw.githubusercontent.com/iotaledger/tips/stardust-api/tips/TIP-0025/core-rest-api.yaml#/components/schemas/AliasAddress"
-                  - $ref: "https://raw.githubusercontent.com/iotaledger/tips/stardust-api/tips/TIP-0025/core-rest-api.yaml#/components/schemas/NFTAddress"
+                  - $ref: "https://raw.githubusercontent.com/iotaledger/tips/main/tips/TIP-0025/core-rest-api.yaml#/components/schemas/Ed25519Address"
+                  - $ref: "https://raw.githubusercontent.com/iotaledger/tips/main/tips/TIP-0025/core-rest-api.yaml#/components/schemas/AliasAddress"
+                  - $ref: "https://raw.githubusercontent.com/iotaledger/tips/main/tips/TIP-0025/core-rest-api.yaml#/components/schemas/NFTAddress"
               balance:
                 type: string
                 description: The total balance within this range.
@@ -449,6 +467,14 @@ components:
               - totalBalance
       required:
         - distribution
+    ClaimedTokensAnalyticsResponse:
+      description: Compiled statistics about claimed tokens.
+      properties:
+        count:
+          type: string
+          description: The total number of claimed tokens.
+      required:
+        - count
   responses:
     Output:
       description: Successful operation.
@@ -468,6 +494,15 @@ components:
           examples:
             default:
               $ref: "#/components/examples/addresses-example"
+    Claiming:
+      description: Successful operation.
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ClaimedTokensAnalyticsResponse"
+          examples:
+            default:
+              $ref: "#/components/examples/claiming-example"
     StorageDeposit:
       description: Successful operation.
       content:
@@ -626,3 +661,6 @@ components:
             addressCount: "27"
             totalBalance: "25486528000"
         ledgerIndex: 1005429
+    claiming-example:
+      value:
+        count: 567543
