--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - ../config.template.toml:/app/config.toml:ro
 
   hornet:
-    image: iotaledger/hornet:2.0.0-beta.8
+    image: iotaledger/hornet:2.0.0-beta
     container_name: hornet
     ulimits:
       nofile:
